# jit_test_2

./: Makefile  README.md  main.py  pyproject.toml
services/: requester.py
tests/: test_api.py
